# CHIP8-Emulator

./: .gitmodules  CMakeLists.txt  README.md
CHIP8 Emulator/src/: CMakeLists.txt  main.cpp
CHIP8 Emulator/src/Emulator/: Emulator.cpp  Emulator.h  Memory.cpp  Memory.h
scripts/: build.bat
src/: Base.h  main.cpp
src/Emulator/: Emulator.cpp  Emulator.h
